<resources>
    <string name="app_name">MiniLinkedIn</string>
    <string name="action_settings">Settings</string>
    <string name="education">education</string>
    <string name="Experience">Experience</string>
    <string name="Projects">Projects</string>
    <string name="Save">Save</string>
    <string name="title_activity_education_edit">EducationEditActivity</string>
    <string name="title_activity_project_edit">ProjectEditActivity</string>
    <string name="title_activity_basic_info_edit">BasicInfoEditActivity</string>
    <string name="school">School</string>
    <string name="major">Major</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="courses">Courses</string>
    <string name="delete">Delete</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="experience_description">What did you do</string>
    <string name="ProjectName">Project name</string>
    <string name="project_description">Details</string>
    <string name="basic_info_name">Your name</string>
    <string name="basic_info_email">Your email</string>
</resources>
