<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/education_school_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school"/>
    <EditText
        android:id="@+id/education_major_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/major"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/education_start_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/start_date"/>
        <EditText
            android:id="@+id/education_end_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/end_date"/>
    </LinearLayout>
    <EditText
        android:id="@+id/education_courses_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courses"/>
    <TextView
        android:id="@+id/education_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="right"
        android:text="@string/delete"/>

</LinearLayout>
