<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:id="@+id/project_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ProjectName"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/project_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/start_date"/>
        <EditText
            android:id="@+id/project_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/end_date"/>
    </LinearLayout>
    <EditText
        android:id="@+id/project_description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_description"/>
    <TextView
        android:id="@+id/project_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="right"
        android:text="@string/delete"/>
</LinearLayout>